--- a/flight/flightconfirmation.html
+++ b/flight/flightconfirmation.html
@@ -122,18 +122,22 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="../flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/travellian-travel-app/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/searchstays.html" class="mobile-link">
           <img src="/travellian-travel-app/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="../auth/favorites.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/travellian-travel-app/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
         >
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="../auth/account.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/travellian-travel-app/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
         >
       </div>
